--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "quasar": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
     "@babel/eslint-parser": "^7.13.14",
+    "@quasar/app": "^2.0.0",
     "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
-    "@quasar/app": "^2.0.0"
+    "prettier": "^2.5.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
